# snake-logic

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: println.rs
src/: direction.rs  directions_possible.rs  get_next_point.rs  lib.rs  point.rs
src/get_next_point/: previous.rs
